@@ -5,6 +5,7 @@ import com.example.topic_forum.models.Role;
 import com.example.topic_forum.models.Topic;
 import com.example.topic_forum.models.UserEntity;
 import com.example.topic_forum.repositoies.UserRepository;
+import com.example.topic_forum.services.CustomUserDetailsService;
 import com.example.topic_forum.services.MessageService;
 import com.example.topic_forum.services.TopicService;
 import com.example.topic_forum.services.UserService;
@@ -16,6 +17,7 @@ import org.springframework.stereotype.Component;
 import jakarta.annotation.PostConstruct;
 
 import java.util.Collections;
+import java.util.Set;
 
 @Component
 public class TestDataGenerator {
@@ -25,7 +27,7 @@ public class TestDataGenerator {
     @Autowired
     private MessageService messageService;
     @Autowired
-    private UserRepository userRepository;
+    private CustomUserDetailsService customUserDetailsService;
     @Autowired
     private UserService userService;
 
@@ -37,25 +39,22 @@ public class TestDataGenerator {
         UserEntity user1 = new UserEntity();
         user1.setUsername("sa");
         user1.setPassword("sa");
-        user1.setActive(true);
-        user1.setRoles(Collections.singleton(Role.USER).toString());
-        userRepository.save(user1);
+        user1.setRoles(Set.of(Role.USER));
+        userService.registerUser(user1);
 
         UserEntity user2 = new UserEntity();
         user2.setUsername("user2");
         user2.setPassword("password2");
-        user2.setActive(true);
-        userRepository.save(user2);
+        userService.registerUser(user2);
 
         UserEntity user3 = new UserEntity();
         user3.setUsername("user3");
         user3.setPassword("password3");
-        user3.setActive(true);
-        userRepository.save(user3);
+        userService.registerUser(user3);
 
-        UserDetails userDetails1 = userService.loadUserByUsername(user1.getUsername());
-        UserDetails userDetails2 = userService.loadUserByUsername(user2.getUsername());
-        UserDetails userDetails3 = userService.loadUserByUsername(user3.getUsername());
+        UserDetails userDetails1 = customUserDetailsService.loadUserByUsername(user1.getUsername());
+        UserDetails userDetails2 = customUserDetailsService.loadUserByUsername(user2.getUsername());
+        UserDetails userDetails3 = customUserDetailsService.loadUserByUsername(user3.getUsername());
 
         for (int i = 0; i < 20; i++) {
             String title = faker.lorem().sentence();
